--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./frontend/src/assets/LOGO-s.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RavBoss.com</title>
   <!-- Font Awesome CDN -->
