--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -1,29 +1,22 @@
+<!-- 404.html -->
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>重定向中...</title>
+    <meta charset="utf-8" />
+    <title>Redirecting…</title>
+    <meta http-equiv="refresh" content="0; url=/?p=%2F%2F404-fallback" />
     <script>
-        // 單頁應用的 GitHub Pages 重定向
-        var segmentCount = 1; // 儲存庫名稱佔用的路徑段數
-        var l = window.location;
-
-        // 將當前 URL 重寫為 /?/path 格式
-        var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-            l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?/' +
-            l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-            (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-            l.hash;
-
-        // 將目標 URL 存儲在 sessionStorage 中
-        sessionStorage.redirect = redirectUrl;
-        window.location.replace(redirectUrl);
+        (function () {
+            var l = window.location;
+            var path = l.pathname + l.search + l.hash;
+            // 把原本的子路徑編碼回傳給首頁，由前端還原
+            var newUrl = '/' + '?p=' + encodeURIComponent(path);
+            l.replace(newUrl);
+        })();
     </script>
 </head>
 
-<body>
-    <p>重定向中，請稍候...</p>
-</body>
+<body>Redirecting…</body>
 
 </html>
