--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js"></script>
   <script>
     (function () {
-      // 從 sessionStorage 中獲取重定向 URL
-      var redirect = sessionStorage.redirect;
-      delete sessionStorage.redirect;
-      if (redirect && redirect != location.href) {
-        history.replaceState(null, null, redirect);
-      }
-    })();
+      (function () {
+        var params = new URLSearchParams(window.location.search);
+        var p = params.get('p');
+        if (p) {
+          // 以 History API 還原原始路由
+          window.history.replaceState(null, '', p);
+        }
+      })();
   </script>
 </head>
 
