--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -3,20 +3,21 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <title>Redirecting…</title>
-    <meta http-equiv="refresh" content="0; url=/?p=%2F%2F404-fallback" />
+    <meta charset="utf-8">
+    <title>重定向中...</title>
     <script>
-        (function () {
-            var l = window.location;
-            var path = l.pathname + l.search + l.hash;
-            // 把原本的子路徑編碼回傳給首頁，由前端還原
-            var newUrl = '/' + '?p=' + encodeURIComponent(path);
-            l.replace(newUrl);
-        })();
+        // 保存當前頁面路徑到 sessionStorage
+        sessionStorage.redirect = location.href;
+
+        // 獲取當前路徑
+        const path = location.pathname + location.search + location.hash;
+
+        // 重定向到首頁並附帶原始路徑作為查詢參數
+        window.location.replace('/?p=' + encodeURIComponent(path));
     </script>
 </head>
 
-<body>Redirecting…</body>
+<body>
+    <p>重定向中，請稍候...</p>
 
 </html>
