--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <title>重定向中...</title>
-    <script>
-        // 保存當前路徑
-        sessionStorage.redirect = location.pathname + location.search + location.hash;
-        // 重定向到首頁
-        location.replace('/');
-    </script>
+  <meta charset="utf-8">
+  <title>頁面未找到 - 冒險者檔案</title>
+  <script>
+    // 保存當前路徑
+    sessionStorage.redirect = location.pathname + location.search + location.hash;
+    
+    // 重定向到首頁
+    window.location.replace('/');
+  </script>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f5f5f5;
+    }
+    h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
-    <p>重定向中，請稍候...</p>
+  <h1>404 - 頁面未找到</h1>
+  <p>很抱歉，您請求的頁面不存在。</p>
+  <p>正在重定向到首頁，請稍候...</p>
+  <p>如果沒有自動重定向，請<a href="/">點擊這裡</a>返回首頁。</p>
 </body>
-
 </html>
